--- a/build.gradle
+++ b/build.gradle
@@ -2,29 +2,32 @@
 
 buildscript {
     repositories {
-        jcenter()
+        google()
+        mavenCentral()
+        maven { url "https://jitpack.io" }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.0'
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.4'
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.4.1'
+        classpath 'com.android.tools.build:gradle:7.4.2'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
     }
 }
 
 allprojects {
     repositories {
-        jcenter()
+        google()
+        mavenCentral()
+        maven { url "https://jitpack.io" }
     }
 }
 
 ext {
     minSdkVersion = 14
     targetSdkVersion = 25
-    compileSdkVersion = 25
+    compileSdkVersion = 33
     buildToolsVersion = '25.0.2'
 
     // dependencies
-    supportV7 = 'com.android.support:appcompat-v7:25.3.0'
+    supportV7 = 'androidx.appcompat:appcompat:1.4.0'
     rxJava = 'io.reactivex.rxjava2:rxjava:2.0.2'
     rxAndroid = 'io.reactivex.rxjava2:rxandroid:2.0.0'
 }
