--- a/patternlockview-reactive/build.gradle
+++ b/patternlockview-reactive/build.gradle
@@ -38,11 +38,10 @@ android {
 }
 
 dependencies {
-    compile project(':patternlockview')
-    compile rootProject.ext.rxJava
-    compile rootProject.ext.rxAndroid
+    implementation project(':patternlockview')
+    implementation rootProject.ext.rxJava
+    implementation rootProject.ext.rxAndroid
+    implementation 'androidx.annotation:annotation:1.3.0'
 }
 
-apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/installv1.gradle'
-apply from: 'https://raw.githubusercontent.com/nuuneoi/JCenter/master/bintrayv1.gradle'
 
